// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filter /> should render correctly 1`] = `
<Styled(Styled(styled.div))>
  <Flex
    align="center"
    justify="space-between"
    padding="1rem"
  >
    <Styled(styled.p)
      weight={600}
    >
      Filter by undefined
    </Styled(styled.p)>
    <styled.button>
      Clear
    </styled.button>
  </Flex>
  <Styled(styled.div)
    padding="0rem 1rem 1rem 1rem"
  >
    <Styled(styled.p)
      color="#ddd"
      fontStyle="italic"
      size={12}
    />
  </Styled(styled.div)>
  <Styled(styled.div)
    height="270px"
  >
    <styled.ul />
  </Styled(styled.div)>
</Styled(Styled(styled.div))>
`;

exports[`<Filter /> should render correctly with scales 1`] = `
<Styled(Styled(styled.div))>
  <Flex
    align="center"
    justify="space-between"
    padding="1rem"
  >
    <Styled(styled.p)
      weight={600}
    >
      Filter by undefined
    </Styled(styled.p)>
    <styled.button>
      Clear
    </styled.button>
  </Flex>
  <Styled(styled.div)
    padding="0rem 1rem 1rem 1rem"
  >
    <Styled(styled.p)
      color="#ddd"
      fontStyle="italic"
      size={12}
    />
  </Styled(styled.div)>
  <Styled(styled.div)
    height="270px"
  >
    <styled.ul>
      <styled.li
        key="1"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 1
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="2"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 2
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="3"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 3
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="4"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 4
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="5"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 5
        </Styled(styled.p)>
      </styled.li>
    </styled.ul>
  </Styled(styled.div)>
</Styled(Styled(styled.div))>
`;

exports[`<Filter /> should render correctly with selected scales 1`] = `
<Styled(Styled(styled.div))>
  <Flex
    align="center"
    justify="space-between"
    padding="1rem"
  >
    <Styled(styled.p)
      weight={600}
    >
      Filter by undefined
    </Styled(styled.p)>
    <styled.button>
      Clear
    </styled.button>
  </Flex>
  <Styled(styled.div)
    padding="0rem 1rem 1rem 1rem"
  >
    <Styled(styled.p)
      color="#ddd"
      fontStyle="italic"
      size={12}
    />
  </Styled(styled.div)>
  <Styled(styled.div)
    height="270px"
  >
    <styled.ul>
      <styled.li
        key="1"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 1
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="2"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 2
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="3"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 3
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="4"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 4
        </Styled(styled.p)>
      </styled.li>
      <styled.li
        key="5"
      >
        <styled.input
          checked={false}
          onChange={[Function]}
        />
        <Styled(styled.p)
          size={14}
        >
          Some Scale 5
        </Styled(styled.p)>
      </styled.li>
    </styled.ul>
  </Styled(styled.div)>
</Styled(Styled(styled.div))>
`;
